# brip

./: .env.example  README.md  pyproject.toml
agents/: __init__.py
agents/base/: __init__.py  base_agent.py
app/: __init__.py
app/monitoring_api/: __init__.py  main.py
config/: agents.yaml  loader.py  settings.yaml  targets.yaml
core/: __init__.py  monitoring.py
core/agent_manager/: __init__.py  api.py  main.py  manager.py
core/communication/: __init__.py  pubsub.py
core/orchestrator/: __init__.py  celery_app.py  tasks.py
data/: __init__.py  database.py
dlnk_monitoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infrastructure/: __init__.py
infrastructure/monitoring/: __init__.py  metrics.py  structured_logger.py
intelligence/: __init__.py
intelligence/cve_database/: __init__.py  data.json  repository.py
intelligence/knowledge_base/: __init__.py  data.yaml  repository.py
services/: openai_service.py
services/auto_detection/: __init__.py  service.py
services/target_manager/: __init__.py  api.py  models.py
