[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlnk-monitoring"
version = "0.1.0"
description = "Monitoring platform for the dLNK attack log system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "psutil>=5.9",
    "redis>=5.0",
    "prometheus_client>=0.19",
    "celery>=5.3",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://example.com/dlnk-monitoring"

[tool.setuptools.packages.find]
include = ["app*", "core*", "infrastructure*"]
